--- a/index.html
+++ b/index.html
@@ -413,10 +413,10 @@
 							<h4>Follow Me</h4>
 						</div>
 						<ul class="list">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance"></i></a></li>
+							<li><a href="https://github.com/k4rth33k" target="_blank"><i class="fa fa-github"></i></a></li>
+							<!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+							<li><a href="https://www.linkedin.com/in/kartheek-surampudi-0a535a163/"><i class="fa fa-linkedin-square" target="_blank"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
