other color changes

--- a/index.html
+++ b/index.html
@@ -241,16 +241,12 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards
-							especially in the
-							workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate
-							behavior
-							is often laughed. inappropriate behavior is often laughed off as “boys will be boys,” women face higher.
+							I am an undergraduate student in India. Intrests and skills include Deep Learning and software development. I'm an open source contributor and a passionate programmer.
 						</p>
-						<p>That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is
+						<!-- <p>That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is
 							often
 							laughed.
-						</p>
+						</p> -->
 					</div>
 					<a href="#" class="primary-btn">More Info</a>
 				</div>
@@ -416,7 +412,7 @@
 							<li><a href="https://github.com/k4rth33k" target="_blank"><i class="fa fa-github"></i></a></li>
 							<!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
-							<li><a href="https://www.linkedin.com/in/kartheek-surampudi-0a535a163/"><i class="fa fa-linkedin-square" target="_blank"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/kartheek-surampudi-0a535a163/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
