--- a/contact.html
+++ b/contact.html
@@ -90,22 +90,27 @@
     <!--================Contact Area =================-->
     <section class="contact_area section_gap">
         <div class="container">
+            <div class="text-center">
+                    <div class="main-title">
+                        <h1>Contact Me</h1>
+                    </div>
+            </div>
             <div class="row">
                 <div class="col-lg-3">
                     <div class="contact_info">
                         <div class="info_item">
                             <i class="lnr lnr-home"></i>
-                            <h6>California, United States</h6>
-                            <p>Santa monica bullevard</p>
+                            <h6>Hyderabad, India</h6>
+                            <p>Catch me if you come here!</p>
                         </div>
-                        <div class="info_item">
+                        <!-- <div class="info_item">
                             <i class="lnr lnr-phone-handset"></i>
                             <h6><a href="#">00 (440) 9865 562</a></h6>
                             <p>Mon to Fri 9am to 6 pm</p>
-                        </div>
+                        </div> -->
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">support@colorlib.com</a></h6>
+                            <h6><a href="#">kartheek2000mike@gmail.com</a></h6>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
@@ -116,6 +121,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+                                <!-- <label>Hello</label> -->
                             </div>
                             <div class="form-group">
                                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
@@ -134,9 +140,6 @@
                         </div>
                     </form>
                 </div>
-            </div>
-            <div id="mapBox" class="mapBox" data-lat="40.701083" data-lon="-74.1522848" data-zoom="13" data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                data-mlat="40.701083" data-mlon="-74.1522848">
             </div>
         </div>
     </section>
