Fixed Resume Page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<li class="nav-item" id="projects-nav"><a class="nav-link" href="#projects" onclick="active('projects')">Projects</a></li>
 							<li class="nav-item" id="contact-nav"><a class="nav-link" href="#contact" onclick="active('contact')">Contact</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">Social</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="files/Kartheek%20Surampudi.pdfKartheek Surampudi.pdf">Resume</a></li>
+							<li class="nav-item"><a class="nav-link" href="files/Kartheek%20Surampudi.pdf">Resume</a></li>
 						</ul>
 					</div>
 				</div>
