--- a/index.html
+++ b/index.html
@@ -178,6 +178,17 @@
 				</div>
 				<div class="col-lg-6 col-sm-6 col-sm-12 work grid-item">
 					<div class="projects_item">
+						<img class="img-fluid w-75" src="img/works/covid.png" alt="">
+						<div class="projects_text">
+							<a href="https://k4rth33k.github.io/covid-viz">
+								<h4>COVID-19 Vizualization</h4>
+							</a>
+							<p>Map based tracker to check the spread of COVID-19</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-6 col-sm-12 work grid-item">
+					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/framework.png" alt="">
 						<div class="projects_text">
 							<a href="portfolio-details.html">
