--- a/index.html
+++ b/index.html
@@ -143,6 +143,17 @@
 			</div>
 			<div class="projects_inner row grid"> 
 				<div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
+				<div class="col-lg-6 col-sm-6 col-sm-12 work grid-item">
+					<div class="projects_item">
+						<img class="img-fluid w-100" src="img/works/covid-kicker.png" alt="">
+						<div class="projects_text">
+							<a href="http://api-covid.eastus2.azurecontainer.io/">
+								<h4>COVID-Kicker</h4>
+							</a>
+							<p>Auto re-training COVID-19 X-Ray Classification</p>
+						</div>
+					</div>
+				</div>
 				<div class="col-lg-6 col-sm-6 col-sm-12 intern grid-item">
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/deepC.jpeg" alt="">
