Removed Abandoned Projects

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-6 col-sm-12 upcoming grid-item">
+                <!-- <div class="col-lg-6 col-sm-6 col-sm-12 upcoming grid-item">
                     <div class="projects_item">
                         <img class="img-fluid w-100" src="img/works/al.png" alt="">
                         <div class="projects_text">
@@ -215,8 +215,8 @@
                             <p>A GUI for data annotation using active learning</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 col-sm-6 col-sm-12 upcoming grid-item">
+                </div> -->
+                <!-- <div class="col-lg-6 col-sm-6 col-sm-12 upcoming grid-item">
                     <div class="projects_item">
                         <img class="w-100" src="img/works/coherence.png" alt="">
                         <div class="projects_text">
@@ -226,7 +226,7 @@
                             <p>A GAN based experiment on Indian Music</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!--<div class="col-lg-6 col-sm-6 col-sm-12 brand web grid-item">
 					<div class="projects_item">
 						<img class="img-fluid w-100" src="img/works/work1.jpg" alt="">
