Added new project

--- a/index.html
+++ b/index.html
@@ -139,9 +139,21 @@
             </div>
             <div class="projects_inner row grid">
                 <div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
+                <!--  -->
                 <div class="col-lg-6 col-sm-6 col-sm-12 work grid-item">
                     <div class="projects_item">
-                        <img class="img-fluid w-100" src="img/works/covid-kicker.png" alt="">
+                        <img class="img-fluid w-100" src="img/works/mapreduce.jpg" alt="">
+                        <div class="projects_text">
+                            <a href="https://github.com/k4rth33k/pyMR">
+                                <h4>pyMR</h4>
+                            </a>
+                            <p>Simple Map Reduce package in python that supports parallel processing</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-6 col-sm-12 work grid-item">
+                    <div class="projects_item">
+                        <img class="img-fluid w-100" src="img/works/y71AiHB.jpg" alt="">
                         <div class="projects_text">
                             <a href="http://api-covid.eastus2.azurecontainer.io/">
                                 <h4>COVID-Kicker</h4>
