--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="banner-content col-lg-12 justify-content-center">
                         <h1>Kartheek Surampudi</h1>
                         <h3>Personal portfolio Website</h3>
-                        <a href="mailto:kartheek2000mike@gmail.com" class="primary-btn">Hire Me</a>
+                        <a href="mailto:kartheek2000mike@gmail.com" class="primary-btn">Let's talk</a>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="mb-50 wow fadeIn" data-wow-duration=".8s">
                         <p>
-                            I am an undergraduate student from India. Intrests and skills include Deep Learning and software development. I'm an open source contributor and a passionate programmer. In love with Python and anything that is touched by it.
+                            I am a Machine Learning Engineer with experiences in building and facilitating ML pipelines. In love with Python and anything that is touched by it. 
                         </p>
                         <!-- <p>That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is
 							often
